Fixed body overflow

--- a/admin-dashboard/main.css
+++ b/admin-dashboard/main.css
@@ -15,6 +15,8 @@ body {
 
   display: flex;
   background-color: var(--secondary);
+
+  overflow: hidden;
 }
 
 h2 {
